[project]
name = "le-wm"
version = "0.1.0"
description = "LeWorldModel: end-to-end JEPA trained from raw pixels"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
dependencies = [
    "stable-worldmodel[train,env]>=0.0.6",
    "stable-pretraining>=0.1.6",
    # Pin sb3 >=2 — older 1.x pulls the unbuildable gym==0.21
    "stable-baselines3>=2.0",
    "hydra-core>=1.3",
    "lightning>=2.6",
    "wandb>=0.20",
    "scikit-learn>=1.7",
    "einops>=0.8",
    "omegaconf>=2.3",
    "numpy>=2.0",
    "torch>=2.6",
    "torchvision>=0.21",
    "datasets>=3.0",
]

[tool.uv]
package = false

[tool.uv.extra-build-dependencies]
grpcio-tools = ["setuptools<81"]
